--- a/software/Makefile
+++ b/software/Makefile
@@ -2,12 +2,12 @@ SHELL := bash
 PRINT := echo -e
 RM := rm -rf
 
-MCU := atmega32u4
-
 CC := avr-gcc
-CFLAGS := -mmcu=$(MCU) -Os -Wall
 OBJCOPY := avr-objcopy
 SIZE := avr-size
+
+CFLAGS = -mmcu=$(MCU) -Os -Wall
+LDFLAGS =
 
 
 CONFIG_FILE := config.mk
@@ -33,7 +33,21 @@ print_config_banner:
 
 config: print_config_banner clean
 	$(eval CHOICE := $(shell read choice rest && echo $$choice))
-	@$(PRINT) "BOARD := $(CHOICE)" > $(CONFIG_FILE)
+ifeq ($(CHOICE),0)
+	@$(PRINT) "BOARD := VASILEBOT_V1" > $(CONFIG_FILE)
+	@$(PRINT) "MCU := atmega328p" > $(CONFIG_FILE)
+	@$(PRINT) "UPLOAD := ./bootloadHID -r vasilebot.hex" > $(CONFIG_FILE)
+else
+    ifeq ($(CHOICE),1)
+	@$(PRINT) "BOARD := ARDUINO_LEONARDO" > $(CONFIG_FILE)
+	@$(PRINT) "MCU := atmega32u4" > $(CONFIG_FILE)
+	@$(PRINT) "UPLOAD := avrdude -p $$(MCU) -P /dev/ttyACM0 -c avr109"\
+	    "-U flash:w:vasilebot.hex" > $(CONFIG_FILE)
+    endif
+endif
+
+clean_config: clean
+	@$(RM) $(CONFIG_FILE)
 
 
 build: vasilebot.hex
@@ -43,27 +57,29 @@ vasilebot.hex: vasilebot.elf
 	$(SIZE) $@
 
 vasilebot.elf: vasilebot.c
-ifeq ($(BOARD),0)
+ifeq ($(BOARD),VASILEBOT_V1)
 	$(eval CFLAGS += -DBOARD_VASILEBOT_V1)
 else
-    ifeq ($(BOARD),1)
-	$(eval CFLAGS += -DBOARD_ARDUINO_UNO)
+    ifeq ($(BOARD),ARDUINO_LEONARDO)
+	$(eval CFLAGS += -DBOARD_ARDUINO_LEONARDO)
     endif
 endif
-
 	$(CC) -o $@ $(CFLAGS) $^
-
-print_upload_warning:
-	@$(PRINT) "Press reset button and wait for the LED to start blinking in a weird way, then you may proceed."
-
-upload: print_upload_warning vasilebot.hex
-	$(eval CHOICE := $(shell read choice rest))
-ifeq ($(BOARD),1)
-	@(avrdude -p atmega32u4 -P /dev/ttyACM0 -c avr109 -U flash:w:vasilebot.hex)
-endif
-
-clean_config: clean
-	@$(RM) $(CONFIG_FILE)
 
 clean:
 	@$(RM) vasilebot.elf vasilebot.hex
+
+
+print_upload_warning: vasilebot.hex
+ifeq ($(BOARD),VASILEBOT_V1)
+	@$(PRINT) "Press reset and button 1, then release reset, release"\
+	    "button 1, then you may proceed..."
+else
+    ifeq ($(BOARD),ARDUINO_LEONARDO)
+	@$(PRINT) "Press reset button and wait for the LED to start blinking"\
+	    "in a weird way, then you may proceed..."
+    endif
+endif
+
+upload: print_upload_warning
+	$(UPLOAD)
